# hfx

./: .gitignore  .mailmap  LICENSE  Makefile  README.md  common.mk  hfx.cabal  sequest.cabal  sequest.params
baseline/: baseline.hp  baseline.prof  baseline.result  baseline.tix  sequest.hs
cbits/: kernels.h  mass.h  utils.c
cbits/kernels/: buildThrySpecXCorr.cu
cuda/: Makefile  groupBy.cu  ion_series.cu  kernels.h  map.cu  mass.h  operator.h  permute.cu  radix_sort.cu  replicate.cu  scan.cu  segmented_scan.cu  utils.cpp  zipWith.cu
data/: JW_T2_230309_5.00613.00613.3.dta  JW_T2_230309_5.00617.00617.3.dta  JW_T2_230309_5.00729.00729.2.dta  JW_T2_230309_5.00998.00998.2.dta  JW_T2_230309_5.01210.01210.2.dta  JW_T2_230309_5.01327.01327.2.dta  sampledb.fasta  test.dta
kernels/: Makefile  buildThrySpecXCorr.cu  fold.cu  fold.cuh  ion_series.cu  kernels-priv.h  kernels.h  map.cu  map.cuh  operator.h  prelude.cu  reduce.cu  reduce.cuh  scan.cu  scan.cuh  sequest.cu  sequestXC_kernel.cu  shared_mem.h  spectrum.cu  utils.c  utils.h  zipWith.cu  zipWith.cuh
kernels/cudpp/: scan_kernel.cu  segmented_scan_cta.cu  segmented_scan_kernel.cu  vector_kernel.cu
other/: ApplicativeParsec.hs  BSplit.hs  SplitAfter.hs
src/: AminoAcid.hs  Config.hs  DTA.hs  DTAParse.hs  IonSeries.chs  IonSeries.hs  Kernels.chs  Main.hs  Mass.hs  PrettyPrint.hs  Protein.hs  Sequest.chs  Sequest.hs  Spectrum.hs  Utils.hs
src/Bio/: AminoAcid.hs  DTA.hs  Sequest.hs  Spectrum.hs
src/Util/: Stats.hs
src/common/: common.mk
src/common/include/: algorithms.h  device.h  operator.h  texture.h  utils.h
src/common/include/cudpp/: utils.h
src/common/src/cudpp/: segmented_scan_kernel.cu
src/cuda/: cuda.sln
src/cuda/cudpp/: scan.cpp
src/cuda/filter/: Makefile  filter-old.cu  filter.cu  filter.h  filter.vcproj
src/cuda/ion_series/: Makefile  ion_series.cu  ion_series.h  ion_series.vcproj  ion_series_inplace.cu
src/cuda/mvm/: Makefile  mvm-nf.cu  mvm.cu  mvm.h  mvm.vcproj
src/cuda/permute/: Makefile  Makefile-disabled  compact.cu  permute.cu  permute.h  permute.vcproj
src/cuda/radix_sort/: Makefile  radix_sort.cpp  radix_sort.cu  radix_sort.h  radix_sort.vcproj  radix_sort_cudpp.cpp
src/cuda/replicate/: replicate.cu
src/cuda/scan/: Makefile  Makefile-disabled  scan.cu  scan.h  scan.vcproj  scan_cudpp.cpp  segmented_scan.cu
src/cuda/smvm/: Makefile  smvm.cu  smvm.h
src/cuda/sort/: Makefile  radix_sort.cu  sort.cu  sort.h
src/haskell/: C2HS.hs  Config.hs  DTA.hs  Database.hs  IonSeries.hs  Location.hs  Main.hs  MainGen.hs  Makefile  Mass.hs  Match.hs  PrettyPrint.hs  Protein.hs  Sequence.hs  Sequest.hs  Spectrum.hs  Time.hs  Utils.hs
src/haskell/CUDA/: Database.hs  PDB.hs  SMVM.hs
src/haskell/Foreign/CUDA/: Algorithms.hs  Util.hs  Utils.hs
src/haskell/Sequence/: Fasta.hs  Fragment.hs  Index.hs  IonSeries.hs  Location.hs  Match.hs  Search.hs
src/haskell/Sequest/: Base.hs  CUDA.hs
src/haskell/Spectrum/: Correlation.hs  DTA.hs  Data.hs  MGF.hs  Parsec.hs
src/haskell/Util/: C2HS.hs  Misc.hs  Parsec.hs  PrettyPrint.hs  Show.hs  Time.hs
src/haskell/Utils/: C2HS.hs  Misc.hs  Parsec.hs  PrettyPrint.hs  Show.hs  Time.hs
src/sequest/: C2HS.hs  Config.hs  DTA.hs  IonSeries.hs  Main.hs  Makefile  Mass.hs  PrettyPrint.hs  Protein.hs  Sequest.hs  Spectrum.hs  Utils.hs
src/sequest/Sequest/: CUDA.hs
test/: fold.chs  scan.chs  zip.chs
tests/driver/: check
tests/kernels/: zip.chs
tests/spectra/: JW_T2_230309_5.00613.00613.3.out  JW_T2_230309_5.00617.00617.3.out  JW_T2_230309_5.00729.00729.2.out  JW_T2_230309_5.00998.00998.2.out  JW_T2_230309_5.01210.01210.2.out  JW_T2_230309_5.01327.01327.2.out  test.out
