Name:                hfx
Version:             0.1
Synopsis:            An implementation of the SEQUEST algorithm for protein identification
Description:
    An implementation of the SEQUEST algorithm on NVIDIA GPUs, for fast
    cross-correlation based identification of protein sequences from tandem MS
    spectra.
    .
    [1] J. K. Eng, B. Fischer, J. Grossmann, and M. J. MacCoss. "A fast sequest
        cross correlation algorithm." Journal of Proteome Research,
        7(10):4598-4602, 2008.
    .
    [2] J. K. Eng, A. L. McCormack, and I. John R. Yates. "An approach to
        correlate tandem mass spectral data of peptides with amino acid sequences
        in a protein database." Journal of the American Society for Mass
        Spectrometry, 5(11):976-989, November 1994.


License:             BSD3
License-file:        LICENSE
Copyright:           Copyright (c) [2009..2011] Trevor L. McDonell
Author:              Trevor L. McDonell <tmcdonell@cse.unsw.edu.au>
Maintainer:          Trevor L. MCDonell <tmcdonell@cse.unsw.edu.au>
Stability:           Experimental
Category:            Bio
Cabal-version:       >=1.2

Build-type:          Simple
Extra-tmp-files:
Extra-source-files:


Flag debug
  Description:  Enable debug support
  Default:      False

Executable hfx
  Main-is:             Main.hs
  hs-source-dirs:      src/haskell
  build-depends:       base                     >= 3.0 && < 5.0,
                       binary-search,
                       bio                      >= 0.5 && < 0.6,
                       boxes                    >= 0.1,
                       bytestring               >= 0.9,
                       cuda                     >= 0.4,
                       directory                >= 1.0,
                       filepath                 >= 1.0,
                       parsec                   >= 3.0,
                       pretty                   >= 1.0,
                       vector                   >= 0.7,
                       vector-algorithms        >= 0.4,
                       zlib                     >= 0.5

  ghc-options:         -Wall -O2 -fwarn-tabs -fno-spec-constr
  extra-libraries:     stdc++
  extra-lib-dirs:      dist/lib

  include-dirs:        src/common/include

  if flag(debug)
    extra-libraries:   filterD ion_seriesD mvmD sortD
  else
    extra-libraries:   filter  ion_series  mvm  sort

  -- Modules not exported by this package.
  -- Other-modules:

  -- Extra tools (e.g. alex, hsc2hs, ...) needed to build the source.
  -- Build-tools:


Executable generate-peptides
  Main-is:             MainGen.hs
  hs-source-dirs:      src/haskell
  build-depends:       binary                   >= 0.4,
                       vector-binary-instances  >= 0.1

  ghc-options:         -Wall -O2 -fno-spec-constr

